--- a/IntranetWeb/IntranetWeb/Site.Master
+++ b/IntranetWeb/IntranetWeb/Site.Master
@@ -42,28 +42,37 @@
     </header>
     <main class="container-fluid">
         <form id="form1" runat="server">
+            <div class="container px-5 my-5 mb-0">
+                <div class="row gx-5">
+                    <%--<asp:Menu ID="Menu1" runat="server" DataSourceID="SiteMapDataSource1" Orientation="Horizontal" StaticDisplayLevels="2"></asp:Menu>--%>
+                    <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
+                    <asp:SiteMapPath ID="SiteMapPath1" runat="server"></asp:SiteMapPath>
+                </div>
+            </div>
             <div>
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
         </form>
     </main>
-  <!-- Footer-->
-  <footer class="bg-dark py-4 mt-auto">
-      <div class="container px-5">
-          <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-              <div class="col-auto"><div class="small m-0 text-white">Copyright &copy; Your Website 2023</div></div>
-              <div class="col-auto">
-                  <a class="link-light small" href="#!">Privacy</a>
-                  <span class="text-white mx-1">&middot;</span>
-                  <a class="link-light small" href="#!">Terms</a>
-                  <span class="text-white mx-1">&middot;</span>
-                  <a class="link-light small" href="#!">Contact</a>
-              </div>
-          </div>
-      </div>
-  </footer>
+    <!-- Footer-->
+    <footer class="bg-dark py-4 mt-auto">
+        <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="col-auto">
+                    <div class="small m-0 text-white">Copyright &copy; Your Website 2023</div>
+                </div>
+                <div class="col-auto">
+                    <a class="link-light small" href="#!">Privacy</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Terms</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Contact</a>
+                </div>
+            </div>
+        </div>
+    </footer>
     <!-- Extras-->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
