--- a/IntranetWeb/IntranetWeb/Site.Master
+++ b/IntranetWeb/IntranetWeb/Site.Master
@@ -12,6 +12,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <!-- Font awesome -->
+    <script src="https://kit.fontawesome.com/133cff1af7.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -23,12 +25,18 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="Default.aspx">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">Usuarios</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownUsuarios" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Usuarios</a>
+                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
+                                <li><a class="dropdown-item" href="RegistrarUsuario.aspx">Agregar Usuario</a></li>
+                                <li><a class="dropdown-item" href="VerUsuarios.aspx">Ver usuarios</a></li>
+                            </ul>
+                        </li>
                         <li class="nav-item"><a class="nav-link" href="about.html">Noticias</a></li>
                         <li class="nav-item"><a class="nav-link" href="contact.html">Páginas</a></li>
                         <li class="nav-item"><a class="nav-link" href="pricing.html">Correspondencia</a></li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownBlog" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cultura</a>
+                            <a class="nav-link dropdown-toggle" id="navbarDropdownCultura" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cultura</a>
                             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
                                 <li><a class="dropdown-item" href="blog-home.html">Cumpleaños</a></li>
                                 <li><a class="dropdown-item" href="blog-post.html">Nacimientos</a></li>
