--- a/IntranetWeb/IntranetWeb/Site.Master
+++ b/IntranetWeb/IntranetWeb/Site.Master
@@ -24,26 +24,8 @@
                 <a class="navbar-brand" href="index.html">Intranet AFC</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="Default.aspx">Home</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownUsuarios" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Usuarios</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="RegistrarUsuario.aspx">Agregar Usuario</a></li>
-                                <li><a class="dropdown-item" href="VerUsuarios.aspx">Ver usuarios</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="nav-link" href="about.html">Noticias</a></li>
-                        <li class="nav-item"><a class="nav-link" href="contact.html">Páginas</a></li>
-                        <li class="nav-item"><a class="nav-link" href="pricing.html">Correspondencia</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" id="navbarDropdownCultura" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cultura</a>
-                            <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdownBlog">
-                                <li><a class="dropdown-item" href="blog-home.html">Cumpleaños</a></li>
-                                <li><a class="dropdown-item" href="blog-post.html">Nacimientos</a></li>
-                                <li><a class="dropdown-item" href="blog-post.html">Promociones Laborales</a></li>
-                            </ul>
-                        </li>
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="navMenu" runat="server">
+                        <!-- El menú dinámico se llenará aquí -->
                     </ul>
                 </div>
             </div>
