--- a/IntranetWeb/IntranetWeb/Site.Master
+++ b/IntranetWeb/IntranetWeb/Site.Master
@@ -1,4 +1,4 @@
-﻿﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="IntranetWeb.Site" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="IntranetWeb.Site" %>
 
 <!DOCTYPE html>
 
@@ -15,6 +15,11 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/133cff1af7.js" crossorigin="anonymous"></script>
     <link href="Content/estilos.css" rel="stylesheet" /> 
+    <script type="text/javascript">
+        function logout() {
+            document.getElementById('<%= btnLogout.ClientID %>').click();
+        }
+    </script>
 </head>
 <body>
     <header>
@@ -43,6 +48,7 @@
                 <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
                 </asp:ContentPlaceHolder>
             </div>
+            <asp:Button ID="btnLogout" runat="server" Text="Logout" OnClick="Logout_Click" Style="display:none;" />
         </form>
     </main>
     <!-- Footer-->
