--- a/IntranetWeb/IntranetWeb/Site.Master
+++ b/IntranetWeb/IntranetWeb/Site.Master
@@ -1,85 +1,4 @@
-﻿<%--<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="IntranetWeb.Site" %>
-
-<!DOCTYPE html>
-
-<html>
-<head runat="server">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>Intranet AFC</title>
-    <!-- Favicon-->
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-    <!-- Bootstrap icons-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-    <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Font awesome -->
-    <script src="https://kit.fontawesome.com/133cff1af7.js" crossorigin="anonymous"></script>
-    <link href="Content/estilos.css" rel="stylesheet" />
-     <!-- Froala Editor -->
-    <link href="Content\froala\css\froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
-    <link href="Content\froala\css\froala_style.min.css" rel="stylesheet" type="text/css" />
-    <script src="Content\froala\js\froala_editor.pkgd.min.js"></script>
-    <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/7/tinymce.min.js" referrerpolicy="origin"></script>
-    <script type="text/javascript">
-        function logout() {
-            document.getElementById('<%= btnLogout.ClientID %>').click();
-        }
-    </script>
-</head>
-<body>
-    <header>
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="container px-5">
-                <a class="navbar-brand" href="RegistrarUsuario.aspx">Intranet AFC</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0" id="navMenu" runat="server">
-                        <!-- El menú dinámico se llenará aquí -->
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-    <main class="container-fluid">
-        <form id="form1" runat="server">
-            <div class="container px-5 my-5 mb-0">
-                <div class="row gx-5">
-                    <asp:SiteMapDataSource ID="SiteMapDataSource1" runat="server" />
-                    <asp:SiteMapPath ID="SiteMapPath1" runat="server"></asp:SiteMapPath>
-                </div>
-            </div>
-            <div>
-                <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
-                </asp:ContentPlaceHolder>
-            </div>
-            <asp:Button ID="btnLogout" runat="server" Text="Logout" OnClick="Logout_Click" Style="display:none;" />
-        </form>
-    </main>
-    <!-- Footer-->
-    <footer class="bg-dark py-4 mt-auto">
-        <div class="container px-5">
-            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
-                <div class="col-auto">
-                    <div class="small m-0 text-white">Copyright &copy; Your Website 2023</div>
-                </div>
-                <div class="col-auto">
-                    <a class="link-light small" href="#!">Privacy</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Terms</a>
-                    <span class="text-white mx-1">&middot;</span>
-                    <a class="link-light small" href="#!">Contact</a>
-                </div>
-            </div>
-        </div>
-    </footer>
-    <!-- Extras-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
-</html>--%>
-
-<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="IntranetWeb.Site" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="IntranetWeb.Site" %>
 
 <!DOCTYPE html>
 
