--- a/IntranetWeb/IntranetWeb/Site.Master
+++ b/IntranetWeb/IntranetWeb/Site.Master
@@ -8,6 +8,7 @@
     <title>Intranet AFC</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/sidebars/">
     <!-- Bootstrap icons-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
@@ -15,6 +16,7 @@
     <!-- Font awesome -->
     <script src="https://kit.fontawesome.com/133cff1af7.js" crossorigin="anonymous"></script>
     <link href="Content/estilos.css" rel="stylesheet" />
+    <link href="Content/sidebar/sidebars.css" rel="stylesheet" />
     <!-- Froala Editor -->
     <link href="Content\froala\css\froala_editor.pkgd.min.css" rel="stylesheet" type="text/css" />
     <link href="Content\froala\css\froala_style.min.css" rel="stylesheet" type="text/css" />
